attempting to ensure phase coherency between experiments

--- a/arm/Makefile
+++ b/arm/Makefile
@@ -1,11 +1,14 @@
-CC=arm-linux-gnueabihf-gcc
+RP_HOST=root@10.42.0.185
+DEST_DIR=/opt/redpitaya/rpc
+
+CC = arm-linux-gnueabihf-gcc
 #HAD TO CHANGE AWAY FROM GNUEABI
 
 #Default location for h files is ./source
-CFLAGS= -std=gnu99 -Wall -Werror -I./src -L lib -lm -lpthread 
+CFLAGS = -std=gnu99 -Wall -Werror -I./src -L lib -lm -lpthread 
 
 #h files used go here
-DEPS= reg.h constants.h setup.h utils.h synth.h colour.h ini.h
+DEPS = reg.h constants.h setup.h utils.h synth.h colour.h ini.h
 
 #c files used go here (with .o extension)
 OBJ = src/main.o src/reg.o src/utils.o src/synth.o src/colour.o src/ini.o
@@ -18,6 +21,7 @@ BIN = milosar
 
 milosar: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS)
+	scp $(BIN) $(RP_HOST):$(DEST_DIR)
 
 .PHONY: clean
 
