ramping requires triggers for stability

--- a/arm/ramps/sin_fn.ini
+++ b/arm/ramps/sin_fn.ini
@@ -1,5 +1,5 @@
 [setup]
-frac_num = 671089		; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
+frac_num = 6039798		; 1.0 MHz = 671088.64	; 1.9 MHz = 1275068.416
 
 [ramp0]
 length = 10		   		; cycles of phase detector (100MHz)
