added makefile copy option, PHASE_OFFSET constant for DDS and updated documentation

--- a/arm/Makefile
+++ b/arm/Makefile
@@ -32,7 +32,11 @@ $(BIN): $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
 	scp $(BIN) $(RP_HOST):$(DEST_DIR)
 
-.PHONY: clean
+.PHONY: clean copy
 
 clean:
 	rm -f $(ODIR)/*.o
+	
+copy:
+	scp $(BIN) $(RP_HOST):$(DEST_DIR)
+	
